@@ -1,33 +1,33 @@
 package com.project.yozmcafe.service.auth;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
-
 import com.project.yozmcafe.controller.auth.OAuthProvider;
 import com.project.yozmcafe.controller.dto.AuthorizationUrlDto;
 import com.project.yozmcafe.controller.dto.TokenResponse;
 import com.project.yozmcafe.domain.member.Member;
 import com.project.yozmcafe.domain.member.MemberInfo;
 import com.project.yozmcafe.domain.member.MemberRepository;
-import com.project.yozmcafe.service.UnViewedCafeService;
+import com.project.yozmcafe.service.CafeRefillEventPublisher;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.Arrays;
+import java.util.List;
+
+import static com.project.yozmcafe.service.UnViewedCafeService.DEFAULT_UNVIEWED_CAFE_SIZE_CONDITION;
 
 @Service
 @Transactional(readOnly = true)
 public class AuthService {
 
-    private final UnViewedCafeService unViewedCafeService;
     private final MemberRepository memberRepository;
     private final JwtTokenProvider jwtTokenProvider;
+    private final CafeRefillEventPublisher eventPublisher;
 
     public AuthService(final JwtTokenProvider jwtTokenProvider, final MemberRepository memberRepository,
-                       final UnViewedCafeService unViewedCafeService) {
+                       final CafeRefillEventPublisher eventPublisher) {
         this.jwtTokenProvider = jwtTokenProvider;
         this.memberRepository = memberRepository;
-        this.unViewedCafeService = unViewedCafeService;
+        this.eventPublisher = eventPublisher;
     }
 
     @Transactional
@@ -36,7 +36,10 @@ public class AuthService {
 
         final Member member = memberRepository.findById(memberInfo.openId())
                 .orElseGet(() -> memberRepository.save(memberInfo.toMember()));
-        unViewedCafeService.refillWhenUnViewedCafesSizeUnderTwenty(member);
+
+        if (member.isUnViewedCafesSizeUnder(DEFAULT_UNVIEWED_CAFE_SIZE_CONDITION)) {
+            eventPublisher.publishCafeRefillEvent(member);
+        }
 
         return new TokenResponse(jwtTokenProvider.createAccessFrom(member.getId()));
     }
@@ -53,6 +56,6 @@ public class AuthService {
     public List<AuthorizationUrlDto> getAuthorizationUrls() {
         return Arrays.stream(OAuthProvider.values())
                 .map(provider -> new AuthorizationUrlDto(provider.getProviderName(), provider.getAuthorizationUrl()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
